# BCWorkshop-Tutorial-Knowledge-Graph

./: .gitignore  .mcp.json  ADAPTER.md  create_knowledge_graph.py  croissant.jsonld  croissant_baked.jsonld  pyproject.toml
config/: biocypher_config.yaml  schema_config.yaml
notebooks/: _reference_croissant.jsonld  _solution_schema_config.yaml  croissant_metadata_walkthrough.py  novice_track_walkthrough.py
src/biocypher_tutorial_kg/adapters/: protein_interaction_adapter.py
