[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biocypher_tutorial_kg"
version = "0.1.0"
description = "A beginner-friendly BioCypher project for learning how to build and extend a small knowledge graph from multiple data sources."
readme = "README.md"
authors = [
    {name = "Scientific Software Center", email = "edwin.carreno@iwr.uni-heidelberg.de"},
]
requires-python = ">=3.11"
dependencies = [
    "biocypher>=0.15.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.32.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "mlcroissant>=1.1.0",
    "croissant-baker>=0.3.1",
]

[project.urls]
"Homepage" = "https://github.com/scientific-software-center/biocypher_tutorial_kg"
"Bug Tracker" = "https://github.com/scientific-software-center/biocypher_tutorial_kg/issues"
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
